Issue #2173:  fix build failure on OS X.  device_encoding was returning an empty string, causing an (invisible) LookupError on any attempt to write to sys.stdout.